# web-hw-13

django/: .gitignore  pyproject.toml
django/quotes_to_scrape/: manage.py
django/quotes_to_scrape/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
django/quotes_to_scrape/quotes/migrations/: 0001_initial.py  0002_alter_quote_quote.py  0003_alter_tag_name.py  0004_author_user_quote_user_tag_user_tag_tag_of_username.py
django/quotes_to_scrape/quotes/static/quotes/: style.css
django/quotes_to_scrape/quotes/templates/quotes/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
django/quotes_to_scrape/quotes/templatetags/: extract.py
django/quotes_to_scrape/quotes_to_scrape/: asgi.py  settings.py  urls.py  wsgi.py
django/quotes_to_scrape/users/: forms.py  urls.py  views.py
django/quotes_to_scrape/users/templates/users/: login.html  signup.html
django/quotes_to_scrape/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
fastapi/: .gitignore  docker-compose.yml  main.py  pyproject.toml
fastapi/migrations/: env.py
fastapi/migrations/versions/: 326c7e85af25_add_users_confirmed.py  395c13a0a2bd_init.py  5204bcdf2249_init.py  ad5610372f62_init.py  be047b7c0d2a_add_user.py
fastapi/src/: schemas.py
fastapi/src/config/: config.ini  config.py
fastapi/src/database/: db.py  models.py
fastapi/src/repository/: contacts.py  users.py
fastapi/src/routes/: auth.py  contacts.py  users.py
fastapi/src/services/: auth.py  email.py
