[tool.poetry]
name = "hw10"
version = "0.1.0"
description = ""
authors = ["Denys Zaitsev <denzai83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pymongo = "^4.3.3"
psycopg2 = "^2.9.6"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
